--- a/frontend/src/components/WelcomeComponent/welcome.css
+++ b/frontend/src/components/WelcomeComponent/welcome.css
@@ -1,10 +1,8 @@
-.field {
+.body {
     width: 100%;
     height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.table {
-    border: solid 1px black;
+    color: rgb(60, 145, 112);
 }
