--- a/frontend/src/components/WelcomeComponent/welcome.css
+++ b/frontend/src/components/WelcomeComponent/welcome.css
@@ -3,6 +3,7 @@
     height: 50vh;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     color: rgb(60, 145, 112);
 }
